# docs/swagger.json
@@ -9,6 +9,52 @@
     "host": "localhost:7000",
     "basePath": "/",
     "paths": {
+        "/admin/login": {
+            "post": {
+                "description": "Authenticate user with provided credentials and generate JWT token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "adminauthentication"
+                ],
+                "summary": "Admin login",
+                "parameters": [
+                    {
+                        "description": "admin login information",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Login successful",
+                        "schema": {
+                            "type": "json"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized - Incorrect username or password",
+                        "schema": {
+                            "type": "json"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "json"
+                        }
+                    }
+                }
+            }
+        },
         "/user/login": {
             "post": {
                 "description": "Authenticate user with provided credentials and generate JWT token",
